; ModuleID = '/home/carl/AnghaBench/mongoose/examples/nRF51/http/rtt/RTT/extr_SEGGER_RTT.c_SEGGER_RTT_WaitKey.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/nRF51/http/rtt/RTT/extr_SEGGER_RTT.c_SEGGER_RTT_WaitKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SEGGER_RTT_WaitKey() #0 {
  %1 = alloca i32, align 4
  br label %2

2:                                                ; preds = %4, %0
  %3 = call i32 (...) @SEGGER_RTT_GetKey()
  store i32 %3, i32* %1, align 4
  br label %4

4:                                                ; preds = %2
  %5 = load i32, i32* %1, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %2, label %7

7:                                                ; preds = %4
  %8 = load i32, i32* %1, align 4
  ret i32 %8
}

declare dso_local i32 @SEGGER_RTT_GetKey(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
